fixes button alignment now that the left section panel shrinks

--- a/src/Umbraco.Web.UI.Client/src/less/panel.less
+++ b/src/Umbraco.Web.UI.Client/src/less/panel.less
@@ -183,6 +183,14 @@
     @media (min-width: 1101px) {
         left: 460px;
     }
+
+    @media (max-width: 767px) {
+        left: 80px;
+    }
+
+    @media (max-width: 500px) {
+        left: 60px;
+    }
 }
 
 .umb-tab-buttons {
